ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: cw.coureur.life
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client-service
              port:
                number: 80
        - path: /logs
          pathType: Prefix
          backend:
            service:
              name: server-service
              port:
                number: 8080
